# system-user-circuits

./: .gitignore  .syncignore  CLAUDE.md  CLAUDE_LAMBDA.md  README.md  SETUP.md  SYNC.md  lambda-sync.sh  pyproject.toml  quick-start.md  sync.env.template
.claude/: settings.json
linear_probe_experiment/: dataset_bare.jsonl  generate_dataset.py  linear_probe.ipynb
phase0_behavioral_analysis/: .gitignore  README.md  generate_report.py  requirements.txt  run_experiments.py
phase0_behavioral_analysis/config/: experiment.yaml
phase0_behavioral_analysis/data/results/: Qwen_Qwen2.5-7B-Instruct_results.jsonl  allenai_Olmo-3-7B-Instruct_results.jsonl  google_gemma-3-27b-it_results.jsonl  meta-llama_Llama-3.1-70B-Instruct_results.jsonl  meta-llama_Llama-3.1-8B-Instruct_results.jsonl  meta-llama_Llama-3.2-1B-Instruct_results.jsonl  meta-llama_Llama-3.3-70B-Instruct_results.jsonl  moonshotai_Kimi-K2.5_results.jsonl  openai_gpt-oss-20b_results.jsonl
phase0_behavioral_analysis/reports/: report.html
phase0_behavioral_analysis/src/: __init__.py  api_client.py  classifiers.py  config.py  experiment.py  metrics.py  prompts.py  reporting.py
phase0_behavioral_analysis/src/report/: __init__.py  (+4 more)
phase0_behavioral_analysis/tests/: __init__.py  conftest.py  test_api_client.py  test_classifiers.py  test_condition_ab_keys.py  test_config.py  test_experiment_tracking.py  test_integration.py  test_layout_sample_counts.py  test_metrics.py  test_prompts.py  test_reporting.py
phase1_linear_probing/: NNSIGHT_NOTES.md  linear_probe.ipynb  linear_probe_mod.ipynb  probe_syntax_test.py
