[project]
name = "system-user-circuits"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # API
    "huggingface_hub>=0.20.0",
    "openrouter>=0.6.0",

    # Language detection
    "langdetect>=1.0.9",

    # Data processing
    # numpy<2.0: TransformerLens, nnterp, and nnsight rely on numpy 1.x APIs
    # (removed aliases like np.bool/int/float, ABI-breaking C extension changes in 2.0).
    # Relax this bound once transformer_lens declares numpy 2.x support.
    "numpy>=1.24.0,<2.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",

    # Configuration
    "pyyaml>=6.0",

    # Progress tracking
    "tqdm>=4.65.0",

    # Interactive notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",

    # Testing
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",

    # Phase 1 – linear probing
    "scikit-learn>=1.3.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "transformer-lens>=2.0.0",
    "nnterp>=0.1.0",
    "nnsight>=0.3.0",
]
